--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bootstrap"]
-	path = bootstrap
+[submodule "_sass/bootstrap"]
+	path = _sass/bootstrap
 	url = https://github.com/twbs/bootstrap.git
