--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,6 @@
 # in the templates via {{ site.myvariable }}.
 title: Tony Pan
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to my personal website! I am a Computer Science student and research assistant
-  at the University of Michigan College of Engineering. Explore this site to learn more about me.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "tonypan.us" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tonypan2000
@@ -41,3 +39,10 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+sass:
+  sass_dir: _sass
+  style: compressed
+  
+# Google Analytics
+google_analytics: UA-105323938-3
